# graph-causal-orchestrator

./: .env.example  README.md  pyproject.toml  responses.json
.cursor/rules/: project.mdc
docs/: causal_overlay_schema.md  wsl-debugging-setup.md
scripts/: add_causal_overlay.py  evaluate_why_aware.py  explore_telecom_graph.py  import_telecom_data.py  setup-pyenv-python.sh
src/: __init__.py
src/config/: __init__.py  settings.py
src/data_pipeline/: __init__.py  extract.py  load_neo4j.py  schemas.py  transform.py
src/graph/: __init__.py  causal_kg.py  neo4j_client.py
src/orchestration/: __init__.py  causal_schema.py
src/orchestration/agents/: __init__.py  causal_agent.py  data_agent.py  planner_agent.py  reviewer_agent.py  solution_agent.py
src/orchestration/graph_workflows/: __init__.py  multi_agent_churn.py  single_loop_churn.py
src/orchestration/tools/: __init__.py  llm_tools.py  neo4j_tools.py
src/specs/: __init__.py  parser.py
src/specs/examples/: churn_investigation.yml  delivery_delay_root_cause.yml  why_aware_eval.yml
tests/: __init__.py  test_causal_kg.py  test_neo4j_client.py  test_neo4j_connection.py  test_schemas.py  test_specs_parser.py
