[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-causal-orchestrator"
version = "0.1.0"
description = "Neo4j + causal graph + LangGraph orchestration (optional AutoGen), runnable in Cursor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "neo4j>=5.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
autogen = ["autogen>=0.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["functional: marks tests that require external services (e.g. Neo4j)"]
